<resources>
    <string name="app_name">SignUpForm</string>
    <string name="action_settings">Settings</string>
    <string name="ok">ok</string>
    <string name="cancel">cancel</string>
    <string name="userName">Username:</string>
    <string name="submit">Submit</string>
    <string name="username_input_hint">Please Enter Your Username</string>
    <string name="password">Password:</string>
    <string name="password_input_hint">Password</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="random">Random</string>
</resources>
