<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.android.signupform.LoginActivity"
    tools:showIn="@layout/activity_login">
    <LinearLayout
        android:id="@+id/username_feild"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/username_label"
            android:layout_weight="25"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/userName"/>
        <EditText
            android:id="@+id/username_input"
            android:layout_weight="75"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/username_label"
            android:hint="@string/username_input_hint"
            />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username_feild">
        <TextView
            android:id="@+id/password_label"
            android:layout_weight="25"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/password"/>
        <EditText
            android:inputType="textPassword"
            android:id="@+id/password_editTextInput"
            android:layout_weight="75"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/password_input_hint"
            />

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_input">
        <TextView
            android:id="@+id/confirm_password_label"
            android:layout_weight="25"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:text="@string/confirm_password"/>
        <EditText
            android:inputType="textPassword"
            android:id="@+id/comfirm_password_editTextInput"
            android:layout_weight="75"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:hint="@string/confirm_password_hint"
            />
    </LinearLayout>

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_below="@id/confirm_password"
        android:layout_alignRight="@id/username_feild"/>

    <!--<Button
        android:layout_below="@id/cancel_button"
        android:layout_toRightOf="@id/cancel_button"
        android:id="@+id/ok_button"
        android:layout_width= "wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:textSize="32sp"/>
    <Button
        android:id="@+id/cancel_button"
        android:layout_width= "wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textSize="32sp"/>-->
</RelativeLayout>
